# taskio

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  init.cpp
include/taskio/: config.hpp  generator.hpp  io_context.hpp  task.hpp
include/taskio/concept/: awaitable.hpp  future.hpp  promise.hpp
include/taskio/detail/: co_spsc.hpp  io_context_info.hpp  safety.hpp  thread_info.hpp  worker.hpp  worker_meta.hpp
include/taskio/log/: log.hpp
include/taskio/util/: to_atomic.hpp
lib/: CMakeLists.txt
lib/taskio/: CMakeLists.txt  io_context.cpp  taskio.cpp
lib/taskio/detail/: worker_meta.cpp
test/: CMakeLists.txt
